тестова версія хедера

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,3 +30,7 @@
                     <a href="#contacts" class="header-nav-link">Тест пула 6</a>
                 </li>
             </ul> 
+        </nav>
+    <!--Якщо буде загальний контейнер-->
+    </div>
+    <!--------------------------------->
