--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -41,8 +41,10 @@
               </a>
             </li>
           </ul>
-          <p>Сумка дуже зручна та стильна, використовую щодня!</p>
-          <h3>Анна</h3>
+          <p class="feedback-text">
+            Сумка дуже зручна та стильна, використовую щодня!
+          </p>
+          <h3 class="feedback-client-name">Анна</h3>
         </div>
       </li>
       <li class="feedback-item">
@@ -84,8 +86,10 @@
               </a>
             </li>
           </ul>
-          <p>Відмінна якість матеріалів, приємно здивована.</p>
-          <h3>Ігор</h3>
+          <p class="feedback-text">
+            Відмінна якість матеріалів, приємно здивована.
+          </p>
+          <h3 class="feedback-client-name">Ігор</h3>
         </div>
       </li>
       <li>
@@ -127,8 +131,10 @@
               </a>
             </li>
           </ul>
-          <p>Сумка повністю відповідає опису, рекомендую!</p>
-          <h3>Олена</h3>
+          <p class="feedback-text">
+            Сумка повністю відповідає опису, рекомендую!
+          </p>
+          <h3 class="feedback-client-name">Олена</h3>
         </div>
       </li>
       <li>
@@ -170,8 +176,8 @@
               </a>
             </li>
           </ul>
-          <p>Швидка доставка та гарне обслуговування.</p>
-          <h3>Сергій</h3>
+          <p class="feedback-text">Швидка доставка та гарне обслуговування.</p>
+          <h3 class="feedback-client-name">Сергій</h3>
         </div>
       </li>
     </ul>
