--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,41 +3,61 @@
     <h2 class="glr-title">Галерея зображень</h2>
     <p class="glr-txt">EcoTotes у повсякденному житті</p>
     <ul class="glr-list">
-      <li class="glr-item">
-        <img
-          class="glr-img"
-          srcset="../img/gallery/img-glr-1@2x.jpg"
-          alt="An eco tote placed on a chair or beside a table at a cozy coffee shop. There’s a cup of coffee, a book or a laptop nearby. The setting is minimal and aesthetic, evoking slow lifestyle and conscious choices."
-          width="288px"
-          height="288px"
-        />
+      <li class="glr-item glr-item-1">
+        <picture>
+          <source
+            media="(max-width: 768px) and (min-resolution: 2x)"
+            srcset="../img/gallery/img-glr-1@2x.jpg 2x"
+          />
+          <img
+            class="glr-img"
+            srcset="../img/gallery/img-glr-tblt-1@2x.jpg 2x"
+            src=""
+            alt="An eco tote placed on a chair or beside a table at a cozy coffee shop. There’s a cup of coffee, a book or a laptop nearby. The setting is minimal and aesthetic, evoking slow lifestyle and conscious choices."
+          />
+        </picture>
       </li>
-      <li class="glr-item">
-        <img
-          class="glr-img"
-          srcset="../img/gallery/img-glr-2@2x.jpg"
-          alt="A city scene where a stylish person carries a tote bag while crossing a street or standing at a crosswalk. Urban backdrop, bicycles, pedestrians, and modern architecture in the background. The bag is modern, clean, and fashionable."
-          width="288px"
-          height="288px"
-        />
+      <li class="glr-item glr-item-2">
+        <picture>
+          <source
+            media="(max-width: 768px) and (min-resolution: 2x)"
+            srcset="../img/gallery/img-glr-2@2x.jpg 2x"
+          />
+          <img
+            class="glr-img"
+            srcset="../img/gallery/img-glr-tblt-2@2x.jpg 2x"
+            src=""
+            alt="A city scene where a stylish person carries a tote bag while crossing a street or standing at a crosswalk. Urban backdrop, bicycles, pedestrians, and modern architecture in the background. The bag is modern, clean, and fashionable."
+          />
+        </picture>
       </li>
-      <li class="glr-item">
-        <img
-          class="glr-img"
-          srcset="../img/gallery/img-glr-3@2x.jpg"
-          alt="A person walking through a park or nature trail carrying an eco-friendly tote bag on their shoulder. Casual outfit, spring or summer scenery, with trees, grass, and soft shadows. The bag moves naturally as part of the lifestyle moment."
-          width="288px"
-          height="288px"
-        />
+      <li class="glr-item glr-item-3">
+        <picture>
+          <source
+            media="(max-width: 768px) and (min-resolution: 2x)"
+            srcset="../img/gallery/img-glr-3@2x.jpg 2x"
+          />
+          <img
+            class="glr-img"
+            srcset="../img/gallery/img-glr-tblt-3@2x.jpg 2x"
+            src=""
+            alt="A person walking through a park or nature trail carrying an eco-friendly tote bag on their shoulder. Casual outfit, spring or summer scenery, with trees, grass, and soft shadows. The bag moves naturally as part of the lifestyle moment."
+          />
+        </picture>
       </li>
-      <li class="glr-item">
-        <img
-          class="glr-img"
-          srcset="../img/gallery/img-glr-4@2x.jpg"
-          alt="A young woman holding a large eco tote bag filled with fresh vegetables and fruits at a local farmer's market. Warm sunlight, cozy atmosphere, background with wooden crates and greenery. The tote has a simple, natural design."
-          width="288px"
-          height="288px"
-        />
+      <li class="glr-item glr-item-4">
+        <picture>
+          <source
+            media="(max-width: 768px) and (min-resolution: 2x)"
+            srcset="../img/gallery/img-glr-4@2x.jpg 2x"
+          />
+          <img
+            class="glr-img"
+            srcset="../img/gallery/img-glr-tblt-4@2x.jpg 2x"
+            src=""
+            alt="A young woman holding a large eco tote bag filled with fresh vegetables and fruits at a local farmer's market. Warm sunlight, cozy atmosphere, background with wooden crates and greenery. The tote has a simple, natural design."
+          />
+        </picture>
       </li>
     </ul>
   </div>
