--- a/src/css/base.css
+++ b/src/css/base.css
@@ -7,11 +7,11 @@
   color: #030a06;
   background-color: #ebf8ed;
 
-  font-synthesis: none;
+  /* font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; */
 }
 
 body {
