--- a/src/css/feedbacks.css
+++ b/src/css/feedbacks.css
@@ -16,7 +16,7 @@
   line-height: 120%;
   letter-spacing: 0.01em;
   text-align: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   color: #030a06;
 }
 .feedback-list {
