--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,5 +1,5 @@
 /* ---------------mobile version--------------------------- */
-@media screen and (max-width: 768px) and (min-resolution: 2x) {
+@media only screen and (min-width: 320px) {
   .gallery {
     padding: 32px 0;
     background-color: #ebf8ed;
@@ -41,7 +41,7 @@
 /* ---------------mobile version--------------------------- */
 
 /* ---------------tablet version--------------------------- */
-@media screen and (min-width: 769px) and (max-width: 1440px) and (min-resolution: 2x) {
+@media only screen and (min-width: 768px) {
   .gallery {
     padding: 64px 0;
   }
@@ -49,6 +49,7 @@
     padding: 0 32px;
   }
   .glr-title {
+    font-family: Comfortaa;
     font-weight: 700;
     font-size: 36px;
     line-height: 120%;
@@ -57,6 +58,7 @@
     margin-bottom: 24px;
   }
   .glr-txt {
+    font-family: inherit;
     font-weight: 400;
     font-size: 18px;
     line-height: 160%;
@@ -70,7 +72,6 @@
     gap: 24px;
   }
   .glr-item {
-    flex-basis: calc((100% - 24px) / 2);
     width: 100%;
     height: 100%;
     border-radius: 32px;
