--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,12 +36,11 @@
                     <a class="header-address-link" href="mailto:hello@ecotote.com">hello@ecotote.com</a></li>
                 </ul>
             </address>
-    <!--    <button class="header-btn">
-                <svg  class="burger-icon" width="16" height="12">
-                <use href="/"></use>
+            <button class="burger-btn" type="button">
+                <svg  class="burger-icon" width="32" height="32">
+                <use href="../img/sprite.svg#icon-menu"></use>
                 </svg>
             </button> 
-    -->
     </div>
 </header>
     
