--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -62,6 +62,44 @@
 
 @media only screen and (min-width: 768px) {
 
+.footer {
+  padding: 64px 0;
+}
+
+.footer-container {
+  padding: 0 32px;
+}
+
+.footer-navigation {
+  gap: 32px;
+  margin-bottom: 24px;
+}
+
+.footer-logo {
+  width: 164px;
+  height: 70px;
+}
+
+.footer-nav {
+  flex-direction: row;
+  gap: 32px;
+}
+
+.footer-social-icon {
+  width: 40px;
+  height: 41px;
+}
+
+.footer-bottom {
+  padding: 16px 0 0 ;
+  gap: 16px;
+}
+
+.footer-address-list {
+  flex-direction: row;
+  gap: 32px;
+}
+
 }
 
 
