--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,13 +6,26 @@
       <li class="glr-item glr-item-1">
         <picture>
           <source
-            media="(max-width: 768px) and (min-resolution: 2x)"
-            srcset="../img/gallery/img-glr-1@2x.jpg 2x"
+            media="(max-width: 767px)"
+            srcset="
+              ../img/gallery/img-mob1.jpg    1x,
+              ../img/gallery/img-mob1@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ../img/gallery/img-tab1.jpg    1x,
+              ../img/gallery/img-tab1@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="../img/gallery/img1.jpg 1x"
           />
           <img
             class="glr-img"
-            srcset="../img/gallery/img-glr-tblt-1@2x.jpg 2x"
-            src=""
+            src="../img/gallery/img1.jpg"
             alt="An eco tote placed on a chair or beside a table at a cozy coffee shop. There’s a cup of coffee, a book or a laptop nearby. The setting is minimal and aesthetic, evoking slow lifestyle and conscious choices."
           />
         </picture>
@@ -20,13 +33,26 @@
       <li class="glr-item glr-item-2">
         <picture>
           <source
-            media="(max-width: 768px) and (min-resolution: 2x)"
-            srcset="../img/gallery/img-glr-2@2x.jpg 2x"
+            media="(max-width: 767px)"
+            srcset="
+              ../img/gallery/img-mob2.jpg    1x,
+              ../img/gallery/img-mob2@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ../img/gallery/img-tab2.jpg    1x,
+              ../img/gallery/img-tab2@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="../img/gallery/img2.jpg 1x"
           />
           <img
             class="glr-img"
-            srcset="../img/gallery/img-glr-tblt-2@2x.jpg 2x"
-            src=""
+            src="../img/gallery/img2.jpg"
             alt="A city scene where a stylish person carries a tote bag while crossing a street or standing at a crosswalk. Urban backdrop, bicycles, pedestrians, and modern architecture in the background. The bag is modern, clean, and fashionable."
           />
         </picture>
@@ -34,13 +60,26 @@
       <li class="glr-item glr-item-3">
         <picture>
           <source
-            media="(max-width: 768px) and (min-resolution: 2x)"
-            srcset="../img/gallery/img-glr-3@2x.jpg 2x"
+            media="(max-width: 767px)"
+            srcset="
+              ../img/gallery/img-mob3.jpg    1x,
+              ../img/gallery/img-mob3@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ../img/gallery/img-tab3.jpg    1x,
+              ../img/gallery/img-tab3@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="../img/gallery/img3.jpg 1x"
           />
           <img
             class="glr-img"
-            srcset="../img/gallery/img-glr-tblt-3@2x.jpg 2x"
-            src=""
+            src="../img/gallery/img3.jpg"
             alt="A person walking through a park or nature trail carrying an eco-friendly tote bag on their shoulder. Casual outfit, spring or summer scenery, with trees, grass, and soft shadows. The bag moves naturally as part of the lifestyle moment."
           />
         </picture>
@@ -48,13 +87,26 @@
       <li class="glr-item glr-item-4">
         <picture>
           <source
-            media="(max-width: 768px) and (min-resolution: 2x)"
-            srcset="../img/gallery/img-glr-4@2x.jpg 2x"
+            media="(max-width: 767px)"
+            srcset="
+              ../img/gallery/img-mob4.jpg    1x,
+              ../img/gallery/img-mob4@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 768px)"
+            srcset="
+              ../img/gallery/img-tab4.jpg    1x,
+              ../img/gallery/img-tab4@2x.jpg 2x
+            "
+          />
+          <source
+            media="(min-width: 1440px)"
+            srcset="../img/gallery/img4.jpg 1x"
           />
           <img
             class="glr-img"
-            srcset="../img/gallery/img-glr-tblt-4@2x.jpg 2x"
-            src=""
+            src="../img/gallery/img4.jpg"
             alt="A young woman holding a large eco tote bag filled with fresh vegetables and fruits at a local farmer's market. Warm sunlight, cozy atmosphere, background with wooden crates and greenery. The tote has a simple, natural design."
           />
         </picture>
