--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -1,13 +1,10 @@
 /* ---------------mobile version--------------------------- */
-@media only screen and (min-width: 320px) {
+@media screen and (min-width: 320px) and (min-resolution: 2x) {
   .gallery {
     padding: 32px 0;
-    background-color: #ebf8ed;
-  }
-  .glr-container {
-    padding: 0 16px;
   }
   .glr-title {
+    font-family: Comfortaa;
     font-weight: 700;
     font-size: 36px;
     line-height: 120%;
@@ -17,7 +14,7 @@
     margin-bottom: 16px;
   }
   .glr-txt {
-    font-family: var(--font-family);
+    font-family: inherit;
     font-weight: 400;
     font-size: 18px;
     line-height: 160%;
@@ -41,13 +38,11 @@
 /* ---------------mobile version--------------------------- */
 
 /* ---------------tablet version--------------------------- */
-@media only screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1440px) and (min-resolution: 2x) {
   .gallery {
     padding: 64px 0;
   }
-  .glr-container {
-    padding: 0 32px;
-  }
+
   .glr-title {
     font-family: Comfortaa;
     font-weight: 700;
@@ -97,7 +92,29 @@
   }
 }
 /* ---------------tablet version--------------------------- */
-/* 
+/* ---------------destop version--------------------------- */
+.gallery {
+  padding: 64px 0;
+}
+.glr-title {
+  font-family: Comfortaa;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 120%;
+  letter-spacing: 0.01em;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.glr-txt {
+  font-family: inherit;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 160%;
+  text-align: center;
+  margin-bottom: 32px;
+}
+/* ---------------destop version--------------------------- */
+
 * {
   outline: 1px solid green !important;
-} */
+}
