--- a/src/css/header.css
+++ b/src/css/header.css
@@ -18,6 +18,7 @@
     height: 32px; 
     outline: none;
     box-shadow: none;
+    fill: #030a06;
     /* видалення кольорового фону при натисканні на мобільних пристроях */
     -webkit-tap-highlight-color: transparent; 
 }
@@ -29,7 +30,75 @@
 
                 /*================= Mobile Menu ==================*/
 
+.mobile-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: #75d281;
+    transform: translateX(100%);
+    transition: transform 600ms ease-in-out;
+    pointer-events: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: transform 550ms ease-in-out, opacity 550ms ease-in-out, visibility 550ms ease-in-out;
+}
 
+.mobile-menu.is-open {
+    transform: translateX(0);
+    pointer-events: auto;
+    visibility: visible;
+    opacity: 1;
+}
+
+.mobile-menu-container {
+    padding: 16px 20px 92px 20px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    box-sizing: border-box;
+    justify-content: space-between;
+}
+
+.mobile-close-button {
+    display: flex;
+    position: absolute;
+    background: transparent;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    justify-content: center;
+    top: 16px;
+    right: 20px;
+    width: 32px;
+    height: 32px;
+    /* видалення кольорового фону при натисканні на мобільних пристроях */
+    -webkit-tap-highlight-color: transparent;
+}
+
+.mobile-close-icon {
+    width: 32px;
+    height: 32px;
+    fill: #030a06;
+}
+
+.mobile-menu-nav-list {
+    display: flex;
+    gap: 32px;
+    list-style: none;
+    flex-direction: column;
+}
+
+.mobile-menu-address-list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    list-style: none;
+    font-style: normal;
+}
 
                 /*==================== Tablet ====================*/
 
@@ -77,7 +146,8 @@
     font-style: normal;
 }
 
-.burger-btn {
+.burger-btn,
+.mobile-menu {
     display: none;
 }
 }
