--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,7 +6,7 @@
       <li class="glr-item glr-item-1">
         <picture>
           <source
-            media="(max-width: 767px)"
+            media="(max-width: 767px) "
             srcset="
               ../img/gallery/img-mob1.jpg    1x,
               ../img/gallery/img-mob1@2x.jpg 2x
@@ -21,7 +21,7 @@
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img1.jpg 1x"
+            srcset="../img/gallery/img1.jpg 1x, ../img/gallery/img4@2x.jpg 2x"
           />
           <img
             class="glr-img"
@@ -48,7 +48,7 @@
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img2.jpg 1x"
+            srcset="../img/gallery/img2.jpg 1x, ../img/gallery/img2@2x.jpg 2x"
           />
           <img
             class="glr-img"
@@ -75,7 +75,7 @@
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img3.jpg 1x"
+            srcset="../img/gallery/img3.jpg 1x, ../img/gallery/img@2x.jpg 2x"
           />
           <img
             class="glr-img"
@@ -87,7 +87,7 @@
       <li class="glr-item glr-item-4">
         <picture>
           <source
-            media="(max-width: 767px)"
+            media="(max-width: 767px) "
             srcset="
               ../img/gallery/img-mob4.jpg    1x,
               ../img/gallery/img-mob4@2x.jpg 2x
@@ -102,7 +102,7 @@
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img4.jpg 1x"
+            srcset="../img/gallery/img4.jpg 1x, ../img/gallery/img4@2x.jpg 2x"
           />
           <img
             class="glr-img"
