--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -33,6 +33,12 @@
     overflow: hidden;
     width: 288px;
     height: 288px;
+    position: relative;
+  }
+  .glr-img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
   }
 }
 /* ---------------mobile version--------------------------- */
@@ -71,6 +77,7 @@
     height: 100%;
     border-radius: 32px;
     overflow: hidden;
+    position: relative;
   }
   .glr-item-1 {
     grid-column-start: 2;
@@ -90,31 +97,80 @@
     grid-column-start: 1;
     grid-row-start: 1;
   }
+  .glr-img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
 }
 /* ---------------tablet version--------------------------- */
 /* ---------------destop version--------------------------- */
-.gallery {
-  padding: 64px 0;
+@media screen and (min-width: 1440px) {
+  .gallery {
+    padding: 64px 0;
+  }
+  .glr-title {
+    font-family: Comfortaa;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 120%;
+    letter-spacing: 0.01em;
+    text-align: center;
+    margin-bottom: 24px;
+  }
+  .glr-txt {
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 160%;
+    text-align: center;
+    margin-bottom: 32px;
+  }
+  .glr-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 24px;
+  }
+
+  .glr-item {
+    width: 100%;
+    height: 100%;
+    border-radius: 32px;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .glr-item-1 {
+    grid-column-start: 1;
+    grid-row-start: 2;
+  }
+
+  .glr-item-2 {
+    grid-row: span 2 / span 2;
+    grid-column-start: 2;
+    grid-row-start: 1;
+  }
+
+  .glr-item-3 {
+    grid-row: span 2 / span 2;
+    grid-column-start: 3;
+    grid-row-start: 1;
+  }
+
+  .glr-item-4 {
+    grid-column-start: 1;
+    grid-row-start: 1;
+  }
+  .glr-img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
 }
-.glr-title {
-  font-family: Comfortaa;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 120%;
-  letter-spacing: 0.01em;
-  text-align: center;
-  margin-bottom: 24px;
-}
-.glr-txt {
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 160%;
-  text-align: center;
-  margin-bottom: 32px;
-}
+
 /* ---------------destop version--------------------------- */
 
-* {
+/* * {
   outline: 1px solid green !important;
-}
+} */
