assortment_v2 (add css mobile)

--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -76,7 +76,10 @@
 
         <div class="text-box">
           <h3 class="sub-title">EcoTote Shopper</h3>
-          <p class="desc">Ідеальна для покупок, з посиленими ручками.</p>
+          <p class="desc">
+            Ідеальна для покупок, з <br />
+            посиленими ручками.
+          </p>
           <p class="price">$30</p>
           <button class="buy-btn" type="button">Купити</button>
         </div>
