--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -54,7 +54,7 @@
             </li>
           </ul>
       </address>
-      <p class="footer-copy">© 2025 EcoTote. Всі права захищені.</p>
+      <p class="footer-copy">&copy; 2025 EcoTote. Всі права захищені.</p>
     </div>
 
   </div>
