--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
     <nav class="footer-navigation">
       <a href="#" class="footer-logo-link">
         <svg class="footer-logo" width="273" height="102">
-          <use href="../img/logo.svg#icon-logo"></use>
+          <use href="/img/logo.svg#icon-logo"></use>
         </svg>
       </a>
   
@@ -22,21 +22,21 @@
         <li class="footer-social-item">
           <a class="footer-social-link" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
             <svg class="footer-social-icon" width="32" height="33">
-              <use href="../img/sprite.svg#icon-instagram"></use>
+              <use href="/img/sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="https://ua.linkedin.com/" target="_blank" rel="noopener noreferrer">
             <svg class="footer-social-icon" width="32" height="33">
-              <use href="../img/sprite.svg#icon-linkedIn"></use>
+              <use href="/img/sprite.svg#icon-linkedIn"></use>
             </svg>
           </a>
         </li>
         <li class="footer-social-item">
           <a class="footer-social-link" href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
             <svg class="footer-social-icon" width="32" height="33">
-              <use href="../img/sprite.svg#icon-youtube"></use>
+              <use href="/img/sprite.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
