--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -1,6 +1,6 @@
 <section class="section-feedback">
   <div class="container feedback-container">
-    <h2 class="feedback-title">Що говорять наші клієнти</h2>
+    <h2 id="feedbacks" class="feedback-title">Що говорять наші клієнти</h2>
     <ul class="feedback-list">
       <li class="feedback-item">
         <div class="feedback-icon-wrapper">
