assortment_v3.1 (btn focus)

--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -1,4 +1,4 @@
-<section class="section-assortment">
+<section class="section-assortment" id="assortment">
   <div class="container container-assortment">
     <h2 class="title">Наші сумки</h2>
     <ul class="asort-sectiom-list">
