--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -1,59 +1,3 @@
-:root {
-  --font-family: "Fira Sans", sans-serif;
-  --second-family: "Comfortaa", sans-serif;
-}
-
-:root {
-	--color-scheme-1-background: var(--color-emerald-lightest);
-	--color-neutral-darkest: #030a06;
-	--color-scheme-1-border: var(--opacity-neutral-darkest-15);
-	--color-scheme-1-text: var(--color-neutral-darkest);
-	--color-neutral-lighter: #d9dad9;
-	--color-white: #fff;
-	--color-neutral-lightest: #f2f2f2;
-	--color-neutral-light: #b3b5b4;
-	--color-neutral: #818482;
-	--color-neutral-dark: #4e5350;
-	--color-neutral-darker: #1c221e;
-	--opacity-transparent: rgba(255, 255, 255, 0);
-	--color-scheme-1-foreground: var(--color-emerald-lighter);
-	--color-scheme-1-accent: var(--color-neutral-darkest);
-	--opacity-white-5: rgba(255, 255, 255, 0.05);
-	--opacity-white-10: rgba(255, 255, 255, 0.1);
-	--opacity-white-15: rgba(255, 255, 255, 0.15);
-	--opacity-white-20: rgba(255, 255, 255, 0.2);
-	--opacity-white-30: rgba(255, 255, 255, 0.3);
-	--opacity-white-40: rgba(255, 255, 255, 0.4);
-	--opacity-white-50: rgba(255, 255, 255, 0.5);
-	--opacity-white-60: rgba(255, 255, 255, 0.6);
-	--opacity-neutral-darkest-5: rgba(3, 10, 6, 0.05);
-	--opacity-neutral-darkest-10: rgba(3, 10, 6, 0.1);
-	--opacity-neutral-darkest-15: rgba(3, 10, 6, 0.15);
-	--opacity-neutral-darkest-20: rgba(3, 10, 6, 0.2);
-	--opacity-neutral-darkest-30: rgba(3, 10, 6, 0.3);
-	--opacity-neutral-darkest-40: rgba(3, 10, 6, 0.4);
-	--opacity-neutral-darkest-50: rgba(3, 10, 6, 0.5);
-	--opacity-neutral-darkest-60: rgba(3, 10, 6, 0.6);
-	--color-emerald-lightest: #ebf8ed;
-	--color-emerald-lighter: #d7f2db;
-	--color-emerald-light: #75d281;
-	--color-emerald: #3ac04c;
-	--color-emerald-dark: #2e993c;
-	--color-emerald-darker: #174c1e;
-	--color-emerald-darkest: #113916;
-	--color-scheme-2-text: var(--color-neutral-darkest);
-	--color-scheme-2-background: var(--color-emerald-light);
-	--color-scheme-2-border: var(--opacity-neutral-darkest-15);
-	--color-scheme-2-accent: var(--color-neutral-darkest);
-	--color-scheme-2-foreground: var(--color-emerald);
-	--color-scheme-3-text: var(--color-neutral-darkest);
-	--color-scheme-3-background: var(--color-white);
-	--color-scheme-3-border: var(--opacity-neutral-darkest-15);
-	--color-scheme-3-accent: var(--color-neutral-darkest);
-	--color-scheme-3-foreground: var(--color-neutral-lightest);
-	--color-error-red: #d64040;
-}
-
 .section-assortment {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -67,13 +11,13 @@
 }
 
 .section-assortment .container-assortment .title {
-    font-family: var(--second-family);
+    font-family: "Comfortaa", sans-serif;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
     letter-spacing: 0.01em;
     text-align: center;
-    color: var(--color-scheme-1-text);
+    color: #030a06;
 
     margin-bottom: 32px;
 }
@@ -110,46 +54,62 @@
 }
 
 .asort-sectiom-list .asort-card .text-box .sub-title {
-    font-family: var(--font-family);
+    font-family: "Fira Sans", sans-serif;
     font-weight: 600;
     font-size: 18px;
     line-height: 1.6;
     text-align: center;
-    color: var(--color-scheme-1-text);
+    color: #030a06;
 }
 
 .asort-sectiom-list .asort-card .text-box .desc {
-    font-family: var(--font-family);
+    font-family: "Fira Sans", sans-serif;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.6;
     text-align: center;
-    color: var(--color-scheme-1-text);
+    color: #030a06;
 
     margin-bottom: 8px;
 }
 
 .asort-sectiom-list .asort-card .text-box .price {
-    font-family: var(--font-family);
+    font-family: "Fira Sans", sans-serif;
     font-weight: 600;
     font-size: 20px;
-    line-height: 1.6;
     text-align: center;
-    color: var(--color-scheme-1-text);
+    color: #030a06;
 
     margin-bottom: 16px;
 }
 
 .asort-sectiom-list .asort-card .text-box .buy-btn {
-    font-family: var(--font-family);
+    font-family: "Fira Sans", sans-serif;
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.6;
-    color: var(--color-neutral-darkest);
+    color: #fff;
 
-    border: 1px solid var(--color-neutral-darkest);
+    border: 1px solid #113916;
+    background: #113916;
+    opacity: 0.6;
+
     border-radius: 6px;
     padding: 8px 20px;
     width: 288px;
     height: 40px;
+
+    cursor: pointer;
+
+    -webkit-tap-highlight-color: transparent;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.asort-sectiom-list .asort-card .text-box .buy-btn:hover {
+    color: #113916;
+    background: transparent;
+}
+
+.asort-sectiom-list .asort-card .text-box .buy-btn:active {
+    color: #113916;
+    border: transparent;
+    background: transparent;
 }
