--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="uk">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +14,11 @@
         href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Fira+Sans:ital,wght@0,400;0,500;0,700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/support.css">
 </head>
 
 <body>
-    <div class="section-suport" id="contacts">
+    <div class="section-support" id="contacts">
         <div class="section-form">
             <h2 class="form-title">Залишились питання?<br>Зв'яжіться з нами!</h2>
             <h3 class="form-subtitle">Ми тут, щоб допомогти!</h3>
@@ -60,5 +59,4 @@
         <div class="image-form"></div>
     </div>
 </body>
-
 </html>
