--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -44,6 +44,7 @@
 
 .asort-sectiom-list .asort-card .text-box .sub-title {
     font-size: 18px;
+    font-weight: 600;
     text-align: center;
 }
 
