fix markup html, css

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,6 +1,6 @@
 <section class="section-about">
   <div class="container">
-    <p class="about-text">Природність</p>
+    <h5 class="about-subtitle">Природність</h5>
     <h2 class="about-title">Турбота про планету</h2>
     <p class="about-description">
       Ми використовуємо органічну бавовну, перероблений пластик, льон та коноплі
