--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -39,7 +39,9 @@
             Елегантна та містка сумка для щоденного використання.
           </p>
           <p class="price">$25</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -81,7 +83,9 @@
             посиленими ручками.
           </p>
           <p class="price">$30</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -122,7 +126,9 @@
             Зручний рюкзак для міста з відділенням для ноутбука.
           </p>
           <p class="price">$45</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -161,7 +167,9 @@
           <h4 class="sub-title">EcoCrossbody Mini</h4>
           <p class="desc">Компактна сумка через плече для найнеобхіднішого.</p>
           <p class="price">$20</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -200,7 +208,9 @@
           <h4 class="sub-title">EcoLunch Bag</h4>
           <p class="desc">Стильна та практична сумка для обідів.</p>
           <p class="price">$15</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -241,7 +251,9 @@
             Велика сумка для пляжних речей з водонепроникною підкладкою.
           </p>
           <p class="price">$35</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -280,7 +292,9 @@
           <h4 class="sub-title">EcoTravel Duffle</h4>
           <p class="desc">Містка дорожня сумка з додатковими кишенями.</p>
           <p class="price">$60</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -319,7 +333,9 @@
           <h4 class="sub-title">EcoKids Bag</h4>
           <p class="desc">Яскрава та зручна сумка для дітей.</p>
           <p class="price">$22</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
     </ul>
