--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,7 +1,7 @@
-<section class="gallery">
+<section class="gallery" id="gallery">
   <div class="container glr-container">
     <h2 class="glr-title">Галерея зображень</h2>
-    <p class="glr-txt">EcoTotes у повсякденному житті</p>
+    <h4 class="glr-txt">EcoTotes у повсякденному житті</h4>
     <ul class="glr-list">
       <li class="glr-item glr-item-1">
         <picture>
