--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -8,24 +8,24 @@
           <source
             media="(max-width: 767px) "
             srcset="
-              ../img/gallery/img-mob1.jpg    1x,
-              ../img/gallery/img-mob1@2x.jpg 2x
+              /img/gallery/img-mob1.jpg    1x,
+              /img/gallery/img-mob1@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ../img/gallery/img-tab1.jpg    1x,
-              ../img/gallery/img-tab1@2x.jpg 2x
+              /img/gallery/img-tab1.jpg    1x,
+              /img/gallery/img-tab1@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img1.jpg 1x, ../img/gallery/img4@2x.jpg 2x"
+            srcset="/img/gallery/img1.jpg 1x, /img/gallery/img4@2x.jpg 2x"
           />
           <img
             class="glr-img"
-            src="../img/gallery/img1.jpg"
+            src="/img/gallery/img1.jpg"
             alt="An eco tote placed on a chair or beside a table at a cozy coffee shop. There’s a cup of coffee, a book or a laptop nearby. The setting is minimal and aesthetic, evoking slow lifestyle and conscious choices."
           />
         </picture>
@@ -35,24 +35,24 @@
           <source
             media="(max-width: 767px)"
             srcset="
-              ../img/gallery/img-mob2.jpg    1x,
-              ../img/gallery/img-mob2@2x.jpg 2x
+              /img/gallery/img-mob2.jpg    1x,
+              /img/gallery/img-mob2@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ../img/gallery/img-tab2.jpg    1x,
-              ../img/gallery/img-tab2@2x.jpg 2x
+              /img/gallery/img-tab2.jpg    1x,
+              /img/gallery/img-tab2@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img2.jpg 1x, ../img/gallery/img2@2x.jpg 2x"
+            srcset="/img/gallery/img2.jpg 1x, /img/gallery/img2@2x.jpg 2x"
           />
           <img
             class="glr-img"
-            src="../img/gallery/img2.jpg"
+            src="/img/gallery/img2.jpg"
             alt="A city scene where a stylish person carries a tote bag while crossing a street or standing at a crosswalk. Urban backdrop, bicycles, pedestrians, and modern architecture in the background. The bag is modern, clean, and fashionable."
           />
         </picture>
@@ -62,24 +62,24 @@
           <source
             media="(max-width: 767px)"
             srcset="
-              ../img/gallery/img-mob3.jpg    1x,
-              ../img/gallery/img-mob3@2x.jpg 2x
+              /img/gallery/img-mob3.jpg    1x,
+              /img/gallery/img-mob3@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ../img/gallery/img-tab3.jpg    1x,
-              ../img/gallery/img-tab3@2x.jpg 2x
+              /img/gallery/img-tab3.jpg    1x,
+              /img/gallery/img-tab3@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img3.jpg 1x, ../img/gallery/img@2x.jpg 2x"
+            srcset="/img/gallery/img3.jpg 1x, /img/gallery/img@2x.jpg 2x"
           />
           <img
             class="glr-img"
-            src="../img/gallery/img3.jpg"
+            src="/img/gallery/img3.jpg"
             alt="A person walking through a park or nature trail carrying an eco-friendly tote bag on their shoulder. Casual outfit, spring or summer scenery, with trees, grass, and soft shadows. The bag moves naturally as part of the lifestyle moment."
           />
         </picture>
@@ -89,24 +89,24 @@
           <source
             media="(max-width: 767px) "
             srcset="
-              ../img/gallery/img-mob4.jpg    1x,
-              ../img/gallery/img-mob4@2x.jpg 2x
+              /img/gallery/img-mob4.jpg    1x,
+              /img/gallery/img-mob4@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 768px)"
             srcset="
-              ../img/gallery/img-tab4.jpg    1x,
-              ../img/gallery/img-tab4@2x.jpg 2x
+              /img/gallery/img-tab4.jpg    1x,
+              /img/gallery/img-tab4@2x.jpg 2x
             "
           />
           <source
             media="(min-width: 1440px)"
-            srcset="../img/gallery/img4.jpg 1x, ../img/gallery/img4@2x.jpg 2x"
+            srcset="/img/gallery/img4.jpg 1x, /img/gallery/img4@2x.jpg 2x"
           />
           <img
             class="glr-img"
-            src="../img/gallery/img4.jpg"
+            src="/img/gallery/img4.jpg"
             alt="A young woman holding a large eco tote bag filled with fresh vegetables and fruits at a local farmer's market. Warm sunlight, cozy atmosphere, background with wooden crates and greenery. The tote has a simple, natural design."
           />
         </picture>
